tests/data/midterm/midterm/2018243/Q7/submission_1/.vocStudentGradingReport.txt

[Executed at: Mon Apr 9 21:29:09 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24783_5/asnlib/autograde.py", line 14, in <module>
    score=runtest.main()
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24783_5/asnlib/runtestcases.py", line 65, in main
    stu_work=getattr(__import__(work_package, fromlist=[fun_name]), fun_name)
  File "./q7_work.py", line 6
    no_of_ways = factorial(p + divider)/(factorial(divider)*factorial(p)*)
                                                                         ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
